--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "tests"]
 	path = tests/testdata
 	url = https://github.com/ethereum/tests
+[submodule "build/_workspace/src/github.com/ipsn/go-ipfs"]
+	path = build/_workspace/src/github.com/ipsn/go-ipfs
+	url = https://github.com/Ether1Project/go-ipfs.git
