--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,4 +1,4 @@
-# This file configures github.com/golangci/golangci-lint.
+# This files configures github.com/golangci/golangci-lint.
 
 run:
   timeout: 2m
