--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,9 +1,12 @@
 # Golang CircleCI 2.0 configuration file
 #
 # Check https://circleci.com/docs/2.0/language-go/ for more details
-version:                2
+version:                2.1
+orbs:
+  github-release:       h-matsuo/github-release@0.1.3
 jobs:
   build:
+    executor:           github-release/default
     docker:
       - image:          circleci/golang:1.14
 
@@ -12,6 +15,11 @@ jobs:
       - checkout
 
       # specify any bash command here prefixed with `run: `
-      - run:            make geth
+      - run:            make geth && cd build/bin && apt-get install zip && zip ether-1-linux-1.3.2.zip geth
       - store_artifacts:
           path:         build/bin/
+    - github-release/create:
+          tag:          1.3.2
+          title:        Ether-1 V1.3.2 - Kronos (Upstream)
+          description:  This release contains bug fixes etc - please see https://github.com/Ether1Project/Ether1/pull/18 for more info.
+          file-path:    ./build/bin/ether-1-linux-1.3.2.zip
