--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - checkout
       # specify any bash command here prefixed with `run: `
-      - run:             make geth && cd build/bin && apt-get install zip && zip ether-1-linux-1.3.2.zip geth
+      - run:             make geth && cd build/bin && sudo apt-get install zip && zip ether-1-linux-1.3.2.zip geth
       - store_artifacts:
           path:          build/bin/
       - github-release/create:
