--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,6 @@ jobs:
     - tar -czvf ether-1-linux-1.3.1.tar.gz build/bin/geth
 
   - stage:        build
-    if:           type = pull_request
     os:           linux
     arch:         arm64
     dist:         xenial
@@ -47,6 +46,11 @@ jobs:
     - unset -f cd
     - go run build/ci.go install ./cmd/geth
     - zip -r ether-1-macos-1.3.1.zip build/bin/geth
+
+before_deploy:
+      - git config --local user.name "FallenGravity"
+      - git config --local user.email "ethan@ether1.org"
+      - git tag Ether-1 V1.3.1 - Test
 
 deploy:
   provider:       releases
