--- a/.travis.yml
+++ b/.travis.yml
@@ -50,7 +50,7 @@ jobs:
 before_deploy:
       - git config --local user.name "FallenGravity"
       - git config --local user.email "ethan@ether1.org"
-      - git tag Ether-1 V1.3.1 - Test
+      - git tag 1.3.1 -a -m "Ether-1 V1.3.1 - Test"
 
 deploy:
   provider:       releases
